--- a/package.json
+++ b/package.json
@@ -6,9 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "alias": {
-    "vue": "./node_modules/vue/dist/vue.common.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AzusaRin/blitzUI-demo.git"
@@ -24,13 +21,9 @@
   },
   "homepage": "https://github.com/AzusaRin/blitzUI-demo#readme",
   "dependencies": {
-    "vue": "^2.5.16",
-    "vue-hot-reload-api": "^2.3.4"
+    "vue": "^2.5.16"
   },
   "devDependencies": {
-    "@vue/component-compiler-utils": "^3.3.0",
-    "node-sass": "^7.0.1",
-    "parcel": "^1.9.2",
-    "vue-template-compiler": "^2.5.16"
+    "parcel": "^1.9.2"
   }
 }
