--- a/package.json
+++ b/package.json
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/AzusaRin/blitzUI-demo#readme",
   "dependencies": {
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
-    "parcel": "^1.9.2"
+    "@vue/component-compiler-utils": "^3.3.0",
+    "node-sass": "^7.0.1",
+    "parcel": "^1.9.2",
+    "vue-template-compiler": "^2.5.16"
+  },
+  "alias": {
+    "vue" : "./node_modules/vue/dist/vue.common.js"
   }
 }
