--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.3.0",
+    "chai": "^4.3.6",
     "node-sass": "^7.0.1",
     "parcel": "^1.9.2",
     "vue-template-compiler": "^2.5.16"
   },
   "alias": {
-    "vue" : "./node_modules/vue/dist/vue.common.js"
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
