--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "这是一个Vue的UI框架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev-test": "parcel watch test/* --no-cache & karma start",
+    "test": "parcel build test/* --no-cache",
+    "sss": "karma start --single-run"
   },
   "repository": {
     "type": "git",
@@ -25,11 +27,22 @@
     "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.7.0",
+    "@parcel/transformer-vue": "^2.7.0",
     "@vue/component-compiler-utils": "^3.3.0",
     "chai": "^4.3.6",
     "chai-spies": "^1.0.0",
+    "karma": "^6.4.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-mocha": "^2.0.1",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^10.0.0",
     "node-sass": "^7.0.1",
-    "parcel": "^1.9.2",
+    "parcel": "^2.7.0",
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.7.0",
     "vue-template-compiler": "^2.5.16"
   },
   "alias": {
