--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "description": "这是一个Vue的UI框架",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "built": "parcel build test/*  --no-cache --no-minify  ",
@@ -39,6 +40,7 @@
     "mocha": "^10.0.0",
     "node-sass": "^7.0.1",
     "parcel": "^1.9.2",
+    "sass-loader": "^13.0.2",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
     "vue-template-compiler": "^2.5.16",
