--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "karma-mocha": "^2.0.1",
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^10.0.0",
-    "node-sass": "^7.0.1",
     "parcel": "^1.9.2",
-    "sass-loader": "^13.0.2",
+    "sass": "^1.54.6",
+    "sass-loader": "^7.0.1",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
     "vue-template-compiler": "^2.5.16",
