--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/AzusaRin/blitzUI-demo#readme",
   "dependencies": {
     "vue": "^2.5.16",
+    "vue-code-highlight": "^0.7.8",
     "vue-hot-reload-api": "^2.3.4"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^10.0.0",
     "parcel": "^1.9.2",
-    "sass": "^1.54.6",
+    "sass": "^1.32.12",
     "sass-loader": "^7.0.1",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
