--- a/package.json
+++ b/package.json
@@ -40,8 +40,8 @@
     "karma-mocha": "^2.0.1",
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^10.0.0",
-    "parcel": "^1.9.2",
-    "sass": "^1.32.12",
+    "parcel-bundler": "^1.9.2",
+    "sass": "^1.54.7",
     "sass-loader": "^7.0.1",
     "sinon": "^14.0.0",
     "sinon-chai": "^3.7.0",
