--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "blitz-ui-demo",
-  "version": "1.0.0",
-  "description": "一款轻量好用的Vue UI组件",
+  "version": "1.0.2",
+  "description": "一款简洁好用的Vue UI组件",
   "main": "dist/index.js",
   "scripts": {
     "dev-test": "parcel watch test/* --no-cache & karma start",
@@ -18,6 +18,10 @@
     "Vue",
     "UI"
   ],
+
+  "files": [
+    "dist"
+  ],
   "author": "AzusaRin",
   "license": "MIT",
   "bugs": {
@@ -25,6 +29,7 @@
   },
   "homepage": "https://github.com/AzusaRin/blitzUI-demo#readme",
   "dependencies": {
+    "user": "^0.0.0",
     "vue": "^2.5.16",
     "vue-code-highlight": "^0.7.8",
     "vue-hot-reload-api": "^2.3.4"
